# qgroundcontrol

./: .clangd  .env.example  .gitignore  .gitmodules  CMakeLists.txt  MAVLink_Data_Processing_Analysis.md  QGCCommon.pri  QGCPostLinkCommon.pri  QGCPostLinkInstaller.pri  QGroundControl_Data_Video_Architecture.md  WebRTC_Module_Logic_Diagram.md  android.pri  develop.md  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
.github/: build-config.json
.github/scripts/: find_binary.py  verify_executable.py
.github/workflows/: analysis.yml  android-linux-qt6.6.3.yml  android-linux.yml  android-macos.yml  android-windows.yml  android.yml  build-results.yml  cache-cleanup.yml  check-links.yml  crowdin_docs_download.yml  crowdin_docs_upload.yml  custom-build.yml  custom.yml  docker-linux.yml  docker.yml  docs_deploy.yml  ios.yml  linux.yml  macos.yml  performance.yml  pr-checks.yml  pre-commit.yml  repo-stats.yml  scorecard.yml  windows.yml
android/: AndroidManifest.xml  build.gradle
cmake/: CreateWinInstaller.cmake  CustomOptions.cmake  Git.cmake  Toolchain.cmake
cmake/GStreamer/: Components.cmake
cmake/find-modules/: FindGStreamer.cmake  FindGStreamerMobile.cmake  FindQGCGStreamer.cmake  GStreamerHelpers.cmake
cmake/install/: CreateIFWInstaller.cmake  Install.cmake
cmake/modules/: Git.cmake  Hardening.cmake
cmake/platform/: Android.cmake  Windows.cmake
custom-example/: qgroundcontrol.qrc
deploy/: create_linux_custom_appimage.sh  missioncontrol-start.sh  missioncontrol.desktop
deploy/android/: android_release.keystore
deploy/windows/: nullsoft_installer.nsi
docs/en/: SUMMARY.md
log/: latest_list
resources/InstrumentValueIcons/: InstrumentValueIcons.qrc
resources/fonts/: RobotoMono-LICENSE.txt
src/: CMakeLists.txt  LoginDialog.qml  LoginDialogCButton.qml  LoginDialogCIcon.qml  LoginDialogLoginPage.qml  LoginDialogPasswordResetPage.qml  LoginDialogRegisterPage.qml  LoginDialogUserInfoPage.qml  QGCApplication.cc  QGCApplication.h  QGCPalette.cc  QGCPalette.h  QGCToolbox.cc  QGCToolbox.h  main.cc
src/ADSB/: ADSBTCPLink.cc
src/API/: QGCCorePlugin.cc  QGCCorePlugin.h
src/AnalyzeView/: AnalyzeView.qml  CMakeLists.txt  CloudUploadPage.qml  ExifParser.cc  ExifParser.h  ImageDownloadPage.qml  LogDownloadController.cc  LogDownloadController.h  LogDownloadPage.qml
src/Android/: AndroidBatteryMonitor.cc  AndroidBatteryMonitor.h  AndroidInit.cc  AndroidInterface.cc  AndroidInterface.h  CMakeLists.txt
src/AppSettings/: CMakeLists.txt  CloudLoginSection.qml  CloudWebRTCSection.qml  HelpSettings.qml  LinkConfigurationManager.qml  SettingsPagesModel.qml  SiyiUniRCChannelSection.qml  SiyiUniRCRcChannelsSection.qml  SiyiUniRCStatusSection.qml  SiyiUniRCTransportSection.qml  TcpSettings.qml  UdpSettings.qml  WebRTCSettings.qml
src/Audio/: AudioOutput.cc  AudioOutput.h
src/AutoPilotPlugins/: AutoPilotPlugin.cc  AutoPilotPlugin.h
src/Camera/: CMakeLists.txt  QGCCameraControl.cc  QGCCameraIO.cc  QGCCameraManager.cc  QGCCameraManager.h  VehicleCameraControl.cc  VehicleCameraControl.h
src/Comms/: CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkInterface.cc  LinkInterface.h  LinkManager.cc  (+7 more)
src/Comms/WebRTC/: CMakeLists.txt  SignalingServerManager.cc  SignalingServerManager.h  WebRTCBinSession.cc  WebRTCBinSession.h  WebRTCConfiguration.cc  WebRTCConfiguration.h  WebRTCLink.cc  WebRTCLink.h  WebRTCStats.h  WebRTCTypes.h  WebRTCWorker.cc  WebRTCWorker.h
src/NTRIP/: CMakeLists.txt  NTRIP.cc  NTRIP.h  NTRIPManager.cc  NTRIPManager.h  NTRIPTCPLink.cc  NTRIPTCPLink.h
src/SiYi/: CMakeLists.txt  SiYi.cc  SiYi.h  SiYiCamera.cc  SiYiCamera.h  SiYiCrcApi.cc  SiYiCrcApi.h  SiYiTcpClient.cc  SiYiTcpClient.h  SiYiTransmitter.cc  SiYiTransmitter.h  SiYiUniRC.cc  SiYiUniRC.h
src/SiYi/docs/: SIYI_MK15_SDK.md  SIYI_MK32_SDK.md  SIYI_UniRC7_SDK.md
src/Vehicle/: AtmosphericSensorFact.json  AtmosphericSensorFactGroup.cc  AtmosphericSensorFactGroup.h  Autotune.cpp  CMakeLists.txt  ComponentInformationManager.cc  DropSequence.cc  DropSequence.h  EKFStatusFact.json  ExternalPowerStatusFactGroup.cc  ExternalPowerStatusFactGroup.h  ExternalPowerStatusFactGroup.json  FTPManager.cc  GeneratorStatusFactGroup.cc  GeneratorStatusFactGroup.h  GeneratorStatusFactGroup.json  InitialConnectStateMachine.cc  InitialConnectStateMachine.h  InitialConnectTest.cc  LandingTargetFactGroup.json  RemoteIDManager.cc  RemoteIDManager.h  SensorFact.json  StandardModes.h  TerrainProtocolHandler.cc  TunnelingDataFact.json  TunnelingDataFactGroup.cc  TunnelingDataFactGroup.h  UASMessageHandler.cc  Vehicle.cc  Vehicle.h  VehicleBatteryFactGroup.cc  VehicleBatteryFactGroup.h  VehicleEKFStatusFactGroup.cc  VehicleEKFStatusFactGroup.h  VehicleEscStatusFactGroup.cc  VehicleEscStatusFactGroup.h  VehicleFact.json  VehicleLandingTargetFactGroup.cc  VehicleLandingTargetFactGroup.h  (+7 more)
src/Vehicle/FactGroups/: AtmosphericSensorFact.json  AtmosphericSensorFactGroup.cc  AtmosphericSensorFactGroup.h  CMakeLists.txt  EscStatusFactGroup.json  EscStatusFactGroupListModel.cc  EscStatusFactGroupListModel.h  ExternalPowerStatusFactGroup.cc  ExternalPowerStatusFactGroup.h  GPSFact.json  LandingTargetFactGroup.json  TunnelingDataFact.json  TunnelingDataFactGroup.cc  VehicleBatteryFactGroup.cc  VehicleBatteryFactGroup.h  VehicleDistanceSensorFactGroup.cc  VehicleEscStatusFactGroup.cc  VehicleEscStatusFactGroup.h  VehicleFact.json  VehicleFactGroup.cc  VehicleFactGroup.h  VehicleGPSFactGroup.cc  VehicleGPSFactGroup.h  VehicleLandingTargetFactGroup.cc  VehicleLandingTargetFactGroup.h  VehicleWindFactGroup.cc  WinchStatusFactGroup.json
src/Vehicle/VehicleSetup/: FirmwareUpgrade.qml  FirmwareUpgradeController.cc  FirmwareUpgradeController.h  PX4FirmwareUpgradeThread.cc  SetupView.qml  VehicleConfigView.qml  VehicleSummary.qml
test/: CMakeLists.txt  UnitTestList.cc
test/AnalyzeView/: CMakeLists.txt
translations/: qgc-json.ts  qgc_json_ja_JP.ts  qgc_json_ko_KR.ts  qgc_json_no_NO.ts  qgc_source_az_AZ.ts  qgc_source_ja_JP.ts  qgc_source_ko_KR.ts  qgc_source_no_NO.ts  qgc_source_pt_PT.ts
(+756 files in other folders)
